--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,8 +16,10 @@
     "axios": "^1.7.8",
     "chart.js": "^4.4.6",
     "gsap": "^3.12.5",
+    "jspdf": "^2.5.2",
     "react": "^18.3.1",
     "react-apexcharts": "^1.5.0",
+    "react-calendar": "^5.1.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-just-parallax": "^3.1.16",
