--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "mongoose": "^8.4.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
-    "react-tradingview-embed": "^3.0.6",
-    "react-tradingview-widget": "^1.3.2"
+    "react-tradingview-embed": "^3.0.6"
   }
 }
